--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     
     <div id="social">
-        <font>GLOBAL <span>Graphic Design</span></font>
+        <font>GLOBAL</font>
         <i class="fa-solid fa-magnifying-glass"></i>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
