--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </div>
     <div id="container">
         <header id="header-pic">
-            <img src="g23.jpg" alt=""> 
+            <img src="pictures/g23.jpg" alt=""> 
         <!-- <div id="centered"> SHARE</div> -->
         </header>
         <section>
@@ -37,7 +37,7 @@
             </nav>
             <main>
                 <h2>Who We Are?</h2>
-                <img id="aboutimg" src="s13.jpg" alt="">
+                <img id="aboutimg" src="pictures/s13.jpg" alt="">
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vero consequatur sit, rem culpa nostrum molestiae explicabo quam velit soluta nulla saepe alias ipsam voluptate autem accusantium odio doloribus rerum.</p>
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vero consequatur sit, rem culpa nostrum molestiae explicabo quam velit soluta nulla saepe alias ipsam voluptate autem accusantium odio doloribus rerum.</p>
                 <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vero consequatur sit, rem culpa nostrum molestiae explicabo quam velit soluta nulla saepe alias ipsam voluptate autem accusantium odio doloribus rerum.</p>
