--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </div>
     <div id="container">
         <header id="header-pic">
-            <img src="g23.jpg" alt=""> 
+            <img src="pictures/g23.jpg" alt=""> 
         <!-- <div id="centered"> SHARE</div> -->
         </header>
         <section>
