--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     </div>
     <div id="container">
         <header id="header-pic">
-            <img src="g23.jpg" alt=""> 
+            <img src="pictures/g23.jpg" alt=""> 
         <!-- <div id="centered"> SHARE</div> -->
         </header>
         <section>
@@ -38,33 +38,33 @@
             </nav>
             <main>
             <h1>Gallery</h1>
-            <a class="link" href="g11.jpg">
-                <img src="g11.jpg" alt="" class="galpic">
+            <a class="link" href="pictures/g11.jpg">
+                <img src="pictures/g11.jpg" alt="" class="galpic">
             </a>
-            <a  class="link" href="g4.jpg">
-                <img src="g4.jpg" alt="" class="galpic">
-            </a>
-
-            <a class="link" href="g33.jpg">
-                <img src="g33.jpg" alt="" class="galpic">
+            <a  class="link" href="pictures/g4.jpg">
+                <img src="pictures/g4.jpg" alt="" class="galpic">
             </a>
 
-            <a class="link" href="g8.jpg">
-                <img src="g8.jpg" alt="" class="galpic">
-            </a>
-            <a class="link" href="g21.jpg">
-                <img src="g21.jpg" alt="" class="galpic">
-            </a>
-            <a  class="link" href="g10.jpg">
-                <img src="g10.jpg" alt="" class="galpic">
+            <a class="link" href="pictures/g33.jpg">
+                <img src="pictures/g33.jpg" alt="" class="galpic">
             </a>
 
-            <a class="link" href="g5.jpg">
-                <img src="g5.jpg" alt="" class="galpic">
+            <a class="link" href="pictures/g8.jpg">
+                <img src="pictures/g8.jpg" alt="" class="galpic">
+            </a>
+            <a class="link" href="pictures/g21.jpg">
+                <img src="pictures/g21.jpg" alt="" class="galpic">
+            </a>
+            <a  class="link" href="pictures/g10.jpg">
+                <img src="pictures/g10.jpg" alt="" class="galpic">
             </a>
 
-            <a class="link" href="g22.jpg">
-                <img src="g22.jpg" alt="" class="galpic">
+            <a class="link" href="pictures/g5.jpg">
+                <img src="pictures/g5.jpg" alt="" class="galpic">
+            </a>
+
+            <a class="link" href="pictures/g22.jpg">
+                <img src="pictures/g22.jpg" alt="" class="galpic">
             </a>
 
 
