--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="container">
        
         <header id="header-pic">
-            <img src="g23.jpg" alt=""> 
+            <img src="pictures/g23.jpg" alt=""> 
         <!-- <div id="centered"> SHARE</div> -->
         
         </header>
@@ -39,25 +39,25 @@
             </nav>
             <main>
                 <div class="index">
-                    <img src="in1.jpg" alt="">
+                    <img src="pictures/in1.jpg" alt="">
                     <h5>TITLE</h5>
                     <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum doloribus molestiae commodi. Distinctio saepe, aspernatur magnam architecto accusantium excepturi a mollitia ea in modi, ex soluta consequuntur incidunt dolorum.</P>
                     <a href="#" class="btn"> Continue</a>
                 </div>
                 <div class="index">
-                    <img src="g30.jpg" alt="">
+                    <img src="pictures/g30.jpg" alt="">
                     <h5>TITLE</h5>
                     <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum doloribus molestiae commodi. Distinctio saepe, aspernatur magnam architecto accusantium excepturi a mollitia ea in modi, ex soluta consequuntur incidunt dolorum.</P>
                     <a href="#" class="btn"> Continue</a>
                 </div>
                 <div class="index">
-                    <img src="g9.jpg" alt="">
+                    <img src="pictures/g9.jpg" alt="">
                     <h5>TITLE</h5>
                     <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum doloribus molestiae commodi. Distinctio saepe, aspernatur magnam architecto accusantium excepturi a mollitia ea in modi, ex soluta consequuntur incidunt dolorum.</P>
                     <a href="#" class="btn"> Continue</a>
                 </div>
                 <div class="index">
-                    <img src="g1.jpg" alt="">
+                    <img src="pictures/g1.jpg" alt="">
                     <h5>TITLE</h5>
                     <P class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum doloribus molestiae commodi. Distinctio saepe, aspernatur magnam architecto accusantium excepturi a mollitia ea in modi, ex soluta consequuntur incidunt dolorum.</P>
                     <a href="#" class="btn"> Continue</a>
