--- a/references.html
+++ b/references.html
@@ -23,7 +23,7 @@
     </div>
     <div id="container">
         <header id="header-pic">
-            <img src="g23.jpg" alt=""> 
+            <img src="pictures/g23.jpg" alt=""> 
         <!-- <div id="centered"> SHARE</div> -->
         </header>
         <section>
@@ -39,32 +39,32 @@
             <main>
             <h1>References</h1>
             <div class="ref">
-                <img class="refpic" src="g1.jpg" alt="">
+                <img class="refpic" src="pictures/g1.jpg" alt="">
                 <h2 class="reftit">BigA Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
             <div class="ref">
-                <img class="refpic" src="g2.jpg" alt="">
+                <img class="refpic" src="pictures/g2.jpg" alt="">
                 <h2 class="reftit">BigB Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
             <div class="ref">
-                <img class="refpic" src="g3.jpg" alt="">
+                <img class="refpic" src="pictures/g3.jpg" alt="">
                 <h2 class="reftit">BigC Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
             <div class="ref">
-                <img class="refpic" src="g32.jpg" alt="">
+                <img class="refpic" src="pictures/g32.jpg" alt="">
                 <h2 class="reftit">BigD Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
             <div class="ref">
-                <img class="refpic" src="g30.jpg" alt="">
+                <img class="refpic" src="pictures/g30.jpg" alt="">
                 <h2 class="reftit">BigE Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
             <div class="ref">
-                <img class="refpic" src="g6.jpg" alt="">
+                <img class="refpic" src="pictures/g6.jpg" alt="">
                 <h2 class="reftit">BigF Soft</h2>
                 <p class="refeks"> Social Media- Graphic Design</p>
             </div>
